--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,7 +23,7 @@ header
     text-align: center;
     color: #ECFC04;
     font-size: 30px;
-    padding: 20px;
+    padding: 10px;
 }
 
 .intro
@@ -33,7 +33,9 @@ header
     align-items: center;
     justify-content: space-around;
     height: 50vh;
+    opacity: 5%;
 }
+
 .instructions
 {
     font-family: 'Trispace', sans-serif;
@@ -52,7 +54,24 @@ header
 {
     display: flex;
     justify-content: space-around;
+    align-items: center;
+    min-width: 100%;
     color: #B2FFFF;
+    font-family: 'Press Start 2P', sans-serif;
+    font-size: small;
+    text-align: center;
+}
+
+.player-score
+{
+    min-width: 50%;
+    padding: 50px;
+}
+
+.computer-score
+{
+    min-width: 50%;
+    padding: 50px;
 }
 
 .options
@@ -62,7 +81,6 @@ header
     align-items: center;
     justify-content: space-around;
     max-width: 1500px;
-    
     padding: 20px;
 }
 
@@ -105,6 +123,9 @@ button
     font-weight: bolder;
     font-size: 20px;
     color:#ECFC04;
+    position: absolute;
+    transform: translate(-25%, -75%);
+    height: 50vh;
 }
 
 .player-choices
