--- a/stylesheet.css
+++ b/stylesheet.css
@@ -35,6 +35,7 @@ header
     height: 50vh;
     background-color: #B2FFFF50;
     border-radius: 8px;
+    transition: opacity 0.5s ease;
 }
 
 .instructions
@@ -128,6 +129,7 @@ button
     position: absolute;
     transform: translate(-25%, -75%);
     height: 50vh;
+    transition: opacity 0.5s ease 0.7s;
 }
 
 .player-choices
