Update SELECTIONS.image. Style scoreboard w/ player choice gif.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -163,3 +163,12 @@ div.fadeIn
     max-width: 20%;
 }
 
+.player-choice
+{
+    min-width: 10%
+}
+
+.player-choice .scoreboard
+{
+    max-width: 20%;
+}
