--- a/stylesheet.css
+++ b/stylesheet.css
@@ -33,15 +33,13 @@ header
     align-items: center;
     justify-content: space-around;
     height: 50vh;
-    background-color: #B2FFFF80;
-    border-radius: 8px;
     transition: opacity 0.5s ease;
 }
 
 .instructions
 {
     font-family: 'Trispace', sans-serif;
-    padding: 30px;
+    padding: 10px;
     color:#ECFC04;
     text-align: center;
 }
@@ -59,7 +57,7 @@ header
     justify-content: space-around;
     align-items: center;
     min-width: 100%;
-    color: #B2FFFF;
+    color:#ECFC04;
     font-family: 'Press Start 2P', sans-serif;
     font-size: small;
     text-align: center;
@@ -125,7 +123,6 @@ button
     font-family: 'Trispace', sans-serif;
     font-weight: bolder;
     font-size: 20px;
-    color:#ECFC04;
     position: absolute;
     transform: translate(-25%, -75%);
     height: 50vh;
@@ -161,6 +158,7 @@ div.fadeIn
 .computer-choice .scoreboard
 {
     max-width: 20%;
+    transform: rotateY(180deg);
 }
 
 .player-choice
